welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:3: error: '<-' expected but ')' found.
  for (i->0 to 4){
                ^Poucet:12: error: illegal start of simple expression
}
^